[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/UI/HealthBar.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/healthBarFillBoss.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI/BulletQueueIcon.gd" type="Script" id=3]
[ext_resource path="res://Assets/Art/healthBarBG.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/healthBarFill.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/IconBox.gd" type="Script" id=6]
[ext_resource path="res://Scripts/UI/UI.gd" type="Script" id=7]
[ext_resource path="res://Assets/Art/iconBox.png" type="Texture" id=8]
[ext_resource path="res://Assets/Art/PixelSpaceRage/Laser_Medium_png_processed.png" type="Texture" id=9]
[ext_resource path="res://Assets/Art/dialogueBox.png" type="Texture" id=11]
[ext_resource path="res://Scripts/UI/LawQueueIcon.gd" type="Script" id=12]
[ext_resource path="res://Assets/Art/LawIcons/Empty.png" type="Texture" id=13]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.12372
margin_right = -1.12378
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealth" type="HBoxContainer" parent="."]
anchor_left = 0.0053535
anchor_top = 1.02983
anchor_right = 0.0053535
anchor_bottom = 1.02983
margin_left = -6.10352e-05
margin_top = -65.8287
margin_right = 702.0
margin_bottom = 16.1713
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayerHealthBar" type="TextureProgress" parent="PlayerHealth"]
margin_right = 702.0
margin_bottom = 82.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
script = ExtResource( 1 )

[node name="BossHealth" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -357.241
margin_top = -44.0649
margin_right = 344.759
margin_bottom = 37.9351
rect_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BossHealthBar" type="TextureProgress" parent="BossHealth"]
margin_right = 702.0
margin_bottom = 82.0
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 2 )
fill_mode = 1
script = ExtResource( 1 )

[node name="IconBox" type="NinePatchRect" parent="."]
margin_left = 9.92941
margin_top = 596.753
margin_right = 90.9294
margin_bottom = 670.753
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletQueueIcon" type="TextureRect" parent="IconBox"]
margin_left = 57.1943
margin_top = 43.2469
margin_right = 200.194
margin_bottom = 179.247
rect_rotation = 180.0
rect_scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 9 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentLaws" type="Control" parent="."]
margin_left = 476.772
margin_top = 18.2395
margin_right = 516.772
margin_bottom = 58.2395
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LawIcon" type="NinePatchRect" parent="CurrentLaws"]
margin_left = 88.199
margin_top = 4.4545
margin_right = 128.199
margin_bottom = 44.4545
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletQueueIcon" type="TextureRect" parent="CurrentLaws/LawIcon"]
margin_left = 4.23975
margin_top = 3.99823
margin_right = 132.24
margin_bottom = 131.998
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
expand = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LawIcon2" type="NinePatchRect" parent="CurrentLaws"]
margin_left = 134.08
margin_top = 3.78632
margin_right = 174.08
margin_bottom = 43.7863
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletQueueIcon" type="TextureRect" parent="CurrentLaws/LawIcon2"]
margin_left = 4.23975
margin_top = 3.99823
margin_right = 132.24
margin_bottom = 131.998
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
expand = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 1

[node name="LawIcon3" type="NinePatchRect" parent="CurrentLaws"]
margin_left = 180.943
margin_top = 3.78632
margin_right = 220.943
margin_bottom = 43.7863
texture = ExtResource( 8 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletQueueIcon" type="TextureRect" parent="CurrentLaws/LawIcon3"]
margin_left = 4.23975
margin_top = 3.99823
margin_right = 132.24
margin_bottom = 131.998
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 13 )
expand = true
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}
index = 2

[node name="DialogueBox" type="NinePatchRect" parent="."]
margin_left = 365.034
margin_top = 596.696
margin_right = 915.034
margin_bottom = 756.696
rect_scale = Vector2( 1, 0.75 )
texture = ExtResource( 11 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="Label" parent="DialogueBox"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -538.0
margin_top = -149.0
margin_right = -407.0
margin_bottom = -113.0
rect_scale = Vector2( 4, 4 )
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
